icons-bottom fixed in order to have text aligned

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -190,6 +190,12 @@
     color: $myrror-grey;
   }
 
+  .icons-tripple-card {
+    font-size: 2.3rem;
+    color: $myrror;
+    margin-bottom: 15px;
+  }
+
   // QUOTE
 
   .quote-container {
@@ -253,23 +259,17 @@
     }
   }
 
-  .fas {
-    font-size: 2.3rem;
-    color: $myrror;
-    margin-bottom: 15px;
-  }
+  
 
-
-  .far {
-    font-size: 2.6rem;
-    color: $myrror;
-    margin-bottom: 15%;
-    margin-left: 15%;
-  }
 
   .bottom-icons {
     color: $myrror-grey;
     margin: 1% 5% 3% 5%;
+    font-size: 2.6rem;
+  }
+
+  .fa-qrcode {
+    width: 41.6px;
   }
 
   .iphone {
